[gd_scene load_steps=2 format=3 uid="uid://barracks_screen"]

[ext_resource type="Script" path="res://scripts/hub/screens/barracks_screen.gd" id="1_script"]

[node name="BarracksScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.102, 0.102, 0.18, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="BackButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "< BACK"

[node name="TitleLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "SOLDIER RECRUITMENT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldDisplay" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="TopBar/GoldDisplay"]
layout_mode = 2
text = "GOLD:"
vertical_alignment = 1

[node name="GoldAmount" type="Label" parent="TopBar/GoldDisplay"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "500"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ContentPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContent" type="VBoxContainer" parent="ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RosterStatus" type="VBoxContainer" parent="ContentPanel/MainContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RosterLabel" type="Label" parent="ContentPanel/MainContent/RosterStatus"]
layout_mode = 2
text = "CURRENT ROSTER"
horizontal_alignment = 1

[node name="CapacityBar" type="ProgressBar" parent="ContentPanel/MainContent/RosterStatus"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
max_value = 4.0
value = 0.0
show_percentage = false

[node name="CapacityText" type="Label" parent="ContentPanel/MainContent/RosterStatus"]
layout_mode = 2
text = "0/4 SOLDIERS"
horizontal_alignment = 1

[node name="BarracksHint" type="Label" parent="ContentPanel/MainContent/RosterStatus"]
layout_mode = 2
text = "Upgrade Barracks at Fort for more capacity"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="ContentPanel/MainContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SoldiersContainer" type="HBoxContainer" parent="ContentPanel/MainContent"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
theme_override_constants/separation = 40

[node name="InfantryCard" type="PanelContainer" parent="ContentPanel/MainContent/SoldiersContainer"]
custom_minimum_size = Vector2(280, 350)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NameLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer"]
layout_mode = 2
text = "INFANTRY"
horizontal_alignment = 1

[node name="Portrait" type="ColorRect" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.18, 0.8, 0.443, 1)

[node name="PortraitLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/Portrait"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "INF"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="GridContainer" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="HPLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "HP:"

[node name="HPValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "20"

[node name="ATKLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "ATK:"

[node name="ATKValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "1d6+1"

[node name="DEFLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "DEF:"

[node name="DEFValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "13"

[node name="MOVELabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "MOVE:"

[node name="MOVEValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "4"

[node name="DescriptionLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer"]
layout_mode = 2
text = "\"Reliable melee fighters\""
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HireButton" type="Button" parent="ContentPanel/MainContent/SoldiersContainer/InfantryCard/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "HIRE - 50 GOLD"

[node name="ArcherCard" type="PanelContainer" parent="ContentPanel/MainContent/SoldiersContainer"]
custom_minimum_size = Vector2(280, 350)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NameLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer"]
layout_mode = 2
text = "ARCHER"
horizontal_alignment = 1

[node name="Portrait" type="ColorRect" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.608, 0.349, 0.714, 1)

[node name="PortraitLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/Portrait"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "ARC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsContainer" type="GridContainer" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer"]
layout_mode = 2
columns = 4

[node name="HPLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "HP:"

[node name="HPValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "15"

[node name="ATKLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "ATK:"

[node name="ATKValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "1d6"

[node name="DEFLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "DEF:"

[node name="DEFValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "11"

[node name="MOVELabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "MOVE:"

[node name="MOVEValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "5"

[node name="RangeLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "RANGE:"

[node name="RangeValue" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "8"

[node name="DescriptionLabel" type="Label" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer"]
layout_mode = 2
text = "\"Deadly at range, fragile up close\""
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer" type="Control" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HireButton" type="Button" parent="ContentPanel/MainContent/SoldiersContainer/ArcherCard/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "HIRE - 100 GOLD"

[node name="Spacer2" type="Control" parent="ContentPanel/MainContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="OwnedRosterDisplay" type="VBoxContainer" parent="ContentPanel/MainContent"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OwnedLabel" type="Label" parent="ContentPanel/MainContent/OwnedRosterDisplay"]
layout_mode = 2
text = "YOUR SOLDIERS:"
horizontal_alignment = 1

[node name="NoSoldiersLabel" type="Label" parent="ContentPanel/MainContent/OwnedRosterDisplay"]
layout_mode = 2
text = "No soldiers recruited. Hire some mercenaries!"
horizontal_alignment = 1

[node name="SoldierIcons" type="HBoxContainer" parent="ContentPanel/MainContent/OwnedRosterDisplay"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8
